# codex-gui

./: AGENTS.md  Cargo.toml  README.md  flake.nix
src/: actions.rs  app.rs  bridge.rs  input.rs  main.rs  models.rs  workspace.rs
src/app/: actions.rs  effects.rs  event_handler.rs  results.rs  thread_mapping.rs
src/gui/: chat_history.rs  chat_panel.rs  mod.rs  side_chat.rs  sidebar.rs  state.rs  widgets.rs
