[package]
name = "codex-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { package = "gpui-unofficial", version = "1.2.7" }
gpui_platform = { package = "gpui-platform-gpui-unofficial", version = "1.2.7", features = [
    "font-kit",
    "runtime_shaders",
] }
serde_json = "1"
unicode-segmentation = "1"
