[package]
name = "codex-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = [
    "font-kit",
    "runtime_shaders",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git", rev = "341619c789e21b941b23c0fb2e535c74bdd4df33" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component.git", rev = "341619c789e21b941b23c0fb2e535c74bdd4df33" }
zed_markdown = { package = "markdown", git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
zed_settings = { package = "settings", git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
zed_theme = { package = "theme", git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
zed_theme_settings = { package = "theme_settings", git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.140.0" }
codex-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.140.0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = [
    "test-support",
] }

[patch."https://github.com/openai/codex.git"]
codex-shell-command = { path = "vendor/codex-shell-command" }

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

# mirror configuration for crates compiled for the build platform
# (without this cargo will compile ~400 crates twice)
[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = true

[profile.dev.package]
# proc-macros start
gpui_macros = { opt-level = 3 }
derive_refineable = { opt-level = 3 }
settings_macros = { opt-level = 3 }
ui_macros = { opt-level = 3 }
util_macros = { opt-level = 3 }
quote = { opt-level = 3 }
syn = { opt-level = 3 }
proc-macro2 = { opt-level = 3 }
# proc-macros end

taffy = { opt-level = 3 }
resvg = { opt-level = 3 }
wasmtime = { opt-level = 3 }

# Build single-source-file crates with cg=1 as it helps make `cargo build` of a whole workspace a bit faster
zed_actions = { codegen-units = 1 }
